samples/_failures_safe/1761632739_d47049_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d3217dc.c: In function ‘main’:
./samples/SAFE/__tmp_1d3217dc.c:182:12: error: missing terminating " character
  182 |     printf("
      |            ^
./samples/SAFE/__tmp_1d3217dc.c:182:5: error: expected expression at end of input
  182 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_1d3217dc.c:182:5: error: expected declaration or statement at end of input
